--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@zenstackhq/openapi": "^2.6.2",
 		"jest": "^29.7.0",
 		"prisma": "^5.20.0",
+		"prisma-dbml-generator": "^0.12.0",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.5",
