--- a/package.json
+++ b/package.json
@@ -21,68 +21,64 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
-		"@nestjs/common": "^10.4.4",
-		"@nestjs/config": "^3.2.3",
-		"@nestjs/core": "^10.4.4",
+		"@nestjs/common": "^10.4.6",
+		"@nestjs/config": "^3.3.0",
+		"@nestjs/core": "^10.4.6",
 		"@nestjs/jwt": "^10.2.0",
 		"@nestjs/passport": "^10.0.3",
-		"@nestjs/platform-express": "^10.4.4",
-		"@nestjs/swagger": "^7.4.2",
-		"@prisma/client": "^5.20.0",
-		"@zenstackhq/runtime": "2.6.2",
-		"@zenstackhq/server": "^2.6.2",
+		"@nestjs/platform-express": "^10.4.6",
+		"@nestjs/swagger": "^8.0.0",
+		"@prisma/client": "^5.21.1",
+		"@scalar/nestjs-api-reference": "^0.3.166",
+		"@zenstackhq/runtime": "2.7.4",
+		"@zenstackhq/server": "^2.7.4",
 		"bcrypt": "^5.1.1",
 		"class-validator": "^0.14.1",
 		"dayjs": "^1.11.13",
-		"oidc-provider": "^8.5.1",
+		"oidc-provider": "^8.5.2",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1",
-		"swagger-ui-express": "^5.0.1",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.2",
+		"@biomejs/biome": "^1.9.4",
 		"@nestjs/cli": "^10.4.5",
-		"@nestjs/schematics": "^10.1.4",
-		"@nestjs/testing": "^10.4.4",
+		"@nestjs/schematics": "^10.2.3",
+		"@nestjs/testing": "^10.4.6",
+		"@scalar/types": "^0.0.17",
 		"@swc/cli": "0.4.1-nightly.20240914",
-		"@swc/core": "^1.7.26",
+		"@swc/core": "^1.7.40",
 		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^5.0.0",
-		"@types/jest": "^29.5.13",
-		"@types/node": "^22.7.4",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^22.8.2",
 		"@types/oidc-provider": "^8.5.2",
 		"@types/passport-jwt": "^4.0.1",
 		"@types/supertest": "^6.0.2",
 		"@types/swagger-ui-express": "^4.1.6",
-		"@zenstackhq/openapi": "^2.6.2",
+		"@zenstackhq/openapi": "^2.7.4",
 		"jest": "^29.7.0",
-		"prisma": "^5.20.0",
+		"prisma": "^5.21.1",
+		"prisma-dbml-generator": "^0.12.0",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.5",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.6.2",
-		"zenstack": "2.6.2"
+		"typescript": "^5.6.3",
+		"zenstack": "2.7.4"
 	},
 	"jest": {
-		"moduleFileExtensions": [
-			"js",
-			"json",
-			"ts"
-		],
+		"moduleFileExtensions": ["js", "json", "ts"],
 		"rootDir": "src",
 		"testRegex": ".*\\.spec\\.ts$",
 		"transform": {
 			"^.+\\.(t|j)s$": "ts-jest"
 		},
-		"collectCoverageFrom": [
-			"**/*.(t|j)s"
-		],
+		"collectCoverageFrom": ["**/*.(t|j)s"],
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node"
 	},
