--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"private": true,
 	"license": "MIT",
 	"scripts": {
+		"protoc": "protoc --ts_proto_opt=nestJs=true --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/grpc ./proto/*.proto",
+		"studio": "prisma studio",
 		"generate": "zenstack generate",
 		"build": "nest build",
 		"format": "biome format --write",
@@ -21,21 +23,25 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
-		"@nestjs/common": "^10.4.6",
+		"@grpc/grpc-js": "^1.12.2",
+		"@grpc/proto-loader": "^0.7.13",
+		"@nestjs/common": "^10.4.7",
 		"@nestjs/config": "^3.3.0",
-		"@nestjs/core": "^10.4.6",
+		"@nestjs/core": "^10.4.7",
 		"@nestjs/jwt": "^10.2.0",
+		"@nestjs/microservices": "^10.4.7",
 		"@nestjs/passport": "^10.0.3",
-		"@nestjs/platform-express": "^10.4.6",
-		"@nestjs/swagger": "^8.0.0",
-		"@prisma/client": "^5.21.1",
-		"@scalar/nestjs-api-reference": "^0.3.166",
-		"@zenstackhq/runtime": "2.7.4",
-		"@zenstackhq/server": "^2.7.4",
+		"@nestjs/platform-express": "^10.4.7",
+		"@nestjs/swagger": "^8.0.5",
+		"@prisma/client": "^5.22.0",
+		"@scalar/nestjs-api-reference": "^0.3.168",
+		"@zenstackhq/runtime": "2.8.1",
+		"@zenstackhq/server": "^2.8.1",
 		"bcrypt": "^5.1.1",
 		"class-validator": "^0.14.1",
 		"dayjs": "^1.11.13",
-		"oidc-provider": "^8.5.2",
+		"google-protobuf": "^3.21.4",
+		"oidc-provider": "^8.5.3",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.2.2",
@@ -44,32 +50,34 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@nestjs/cli": "^10.4.5",
+		"@nestjs/cli": "^10.4.7",
 		"@nestjs/schematics": "^10.2.3",
-		"@nestjs/testing": "^10.4.6",
-		"@scalar/types": "^0.0.17",
-		"@swc/cli": "0.4.1-nightly.20240914",
-		"@swc/core": "^1.7.40",
+		"@nestjs/testing": "^10.4.7",
+		"@scalar/types": "^0.0.19",
+		"@swc/cli": "0.5.0",
+		"@swc/core": "^1.9.2",
+		"@swc/jest": "^0.2.37",
 		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.14",
-		"@types/node": "^22.8.2",
+		"@types/node": "^22.9.0",
 		"@types/oidc-provider": "^8.5.2",
 		"@types/passport-jwt": "^4.0.1",
 		"@types/supertest": "^6.0.2",
-		"@types/swagger-ui-express": "^4.1.6",
-		"@zenstackhq/openapi": "^2.7.4",
+		"@types/swagger-ui-express": "^4.1.7",
+		"@zenstackhq/openapi": "^2.8.1",
 		"jest": "^29.7.0",
-		"prisma": "^5.21.1",
+		"prisma": "^5.22.0",
 		"prisma-dbml-generator": "^0.12.0",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.5",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
+		"ts-proto": "^2.2.7",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.6.3",
-		"zenstack": "2.7.4"
+		"zenstack": "2.8.1"
 	},
 	"jest": {
 		"moduleFileExtensions": ["js", "json", "ts"],
