--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@grpc/grpc-js": "^1.12.2",
 		"@grpc/proto-loader": "^0.7.13",
+		"@liaoliaots/nestjs-redis": "^10.0.0",
 		"@nestjs/common": "^10.4.7",
 		"@nestjs/config": "^3.3.0",
 		"@nestjs/core": "^10.4.7",
@@ -40,12 +41,15 @@
 		"bcrypt": "^5.1.1",
 		"class-validator": "^0.14.1",
 		"dayjs": "^1.11.13",
+		"drizzle-orm": "^0.36.2",
 		"google-protobuf": "^3.21.4",
+		"ms": "^2.1.3",
 		"oidc-provider": "^8.5.3",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1",
+		"ua-parser-js": "^1.0.39",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
 	},
 	"devDependencies": {
@@ -80,13 +84,19 @@
 		"zenstack": "2.8.1"
 	},
 	"jest": {
-		"moduleFileExtensions": ["js", "json", "ts"],
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
 		"rootDir": "src",
 		"testRegex": ".*\\.spec\\.ts$",
 		"transform": {
 			"^.+\\.(t|j)s$": "ts-jest"
 		},
-		"collectCoverageFrom": ["**/*.(t|j)s"],
+		"collectCoverageFrom": [
+			"**/*.(t|j)s"
+		],
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node"
 	},
