--- a/package.json
+++ b/package.json
@@ -26,62 +26,63 @@
 		"@grpc/grpc-js": "^1.12.2",
 		"@grpc/proto-loader": "^0.7.13",
 		"@liaoliaots/nestjs-redis": "^10.0.0",
-		"@nestjs/common": "^10.4.7",
+		"@nestjs/common": "^10.4.12",
 		"@nestjs/config": "^3.3.0",
-		"@nestjs/core": "^10.4.7",
+		"@nestjs/core": "^10.4.12",
 		"@nestjs/jwt": "^10.2.0",
-		"@nestjs/microservices": "^10.4.7",
+		"@nestjs/microservices": "^10.4.12",
 		"@nestjs/passport": "^10.0.3",
-		"@nestjs/platform-express": "^10.4.7",
-		"@nestjs/swagger": "^8.0.5",
-		"@prisma/client": "^5.22.0",
-		"@scalar/nestjs-api-reference": "^0.3.168",
-		"@zenstackhq/runtime": "2.8.1",
-		"@zenstackhq/server": "^2.8.1",
+		"@nestjs/platform-express": "^10.4.12",
+		"@nestjs/swagger": "^8.0.7",
+		"@prisma/client": "^6.0.0",
+		"@scalar/nestjs-api-reference": "^0.3.171",
+		"@zenstackhq/runtime": "2.9.4",
+		"@zenstackhq/server": "^2.9.4",
 		"bcrypt": "^5.1.1",
 		"class-validator": "^0.14.1",
 		"dayjs": "^1.11.13",
-		"drizzle-orm": "^0.36.2",
+		"drizzle-orm": "^0.36.4",
 		"google-protobuf": "^3.21.4",
 		"ms": "^2.1.3",
-		"oidc-provider": "^8.5.3",
+		"oidc-provider": "^8.6.0",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1",
-		"ua-parser-js": "^1.0.39",
+		"ua-parser-js": "^2.0.0",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@nestjs/cli": "^10.4.7",
+		"@nestjs/cli": "^10.4.8",
 		"@nestjs/schematics": "^10.2.3",
-		"@nestjs/testing": "^10.4.7",
-		"@scalar/types": "^0.0.19",
-		"@swc/cli": "0.5.0",
-		"@swc/core": "^1.9.2",
+		"@nestjs/testing": "^10.4.12",
+		"@scalar/types": "^0.0.22",
+		"@swc/cli": "0.5.2",
+		"@swc/core": "^1.9.3",
 		"@swc/jest": "^0.2.37",
 		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.14",
-		"@types/node": "^22.9.0",
+		"@types/ms": "^0.7.34",
+		"@types/node": "^22.10.1",
 		"@types/oidc-provider": "^8.5.2",
 		"@types/passport-jwt": "^4.0.1",
 		"@types/supertest": "^6.0.2",
 		"@types/swagger-ui-express": "^4.1.7",
-		"@zenstackhq/openapi": "^2.8.1",
+		"@zenstackhq/openapi": "^2.9.4",
 		"jest": "^29.7.0",
-		"prisma": "^5.22.0",
+		"prisma": "^6.0.0",
 		"prisma-dbml-generator": "^0.12.0",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.5",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
-		"ts-proto": "^2.2.7",
+		"ts-proto": "^2.4.2",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.6.3",
-		"zenstack": "2.8.1"
+		"typescript": "^5.7.2",
+		"zenstack": "2.9.4"
 	},
 	"jest": {
 		"moduleFileExtensions": [
